--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-    <script src="_framework/Blazor.Runtime.js" main="BlazorApplication1.dll"></script>
+    <script src="_framework/CSharpWeb.Runtime.js" main="CSharpWebApplication1.dll"></script>
 </body>
 </html>
